--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>CIT 230 Assignment Portal | Chris B. Taylor | BYU-Idaho</title>
+<title>CIT 230 Assignment Portal | Mason Rowley | BYU-Idaho</title>
  
 
 
@@ -11,7 +11,8 @@
 <body>
     
 <h1><a href="assingments/lesson-3/fixedhtml.html"></a> </h1>
- <h2> </h2>
+<h1><a href="MasonRowley.github.io/assingments/lesson-4/Site planning Document.pdf"></a>"</h1> 
+<h1><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html"></a> </h1>
  <p> 
 
  </p>
