--- a/MasonRowley.github.io/assingments/lesson-4/town-template.html
+++ b/MasonRowley.github.io/assingments/lesson-4/town-template.html
@@ -36,7 +36,7 @@
 </div>
 
 <div id="maps">
-    <a href="#" alt="map"></a>
+    <a href="#" alt="map">Map Link</a>
     <ul>
         <li>contact info</li>
         <li>contact info</li>
