--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-<!DOCTYPE HTML> 
+<!DOCTYPE html> 
 <html lang="en-us">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>CIT 230 Assignment Portal | Mason Rowley | BYU-Idaho</title>
  
-
+<h1>CIT 230 Assignment Portal | Mason Rowley | BYU-Idaho</h1>
 
 </head>
 <body>
     
-<h1><a href="assingments/lesson-3/fixedhtml.html"></a> </h1>
+<h3><a href="assingments/lesson-3/fixedhtml.html">Lesson 3 FixedHTML</a> </h3>
 
-<h1><a href="MasonRowley.github.io/assingments/lesson-4/Site planning Document.pdf"></a>"</h1> 
-<h1><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html"></a> </h1>
- <p> 
-
- </p>
+<h3><a href="MasonRowley.github.io/assingments/lesson-4/Site planning Document.pdf">Lesson 4 Site Planning Doc</a></h3> 
+<h3><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html"> Lesson 4 Town Template</a> </h3>
+ 
  <img src="images/me.png" alt="Picture of me">
- <a href="www.byui.edu">
+ 
+ 
+ <a href="www.byui.edu">BYUI.edu</a>
 </body>
 </html>
