--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-<h3><a href="assingments/lesson-3/fixedhtml.html">Lesson 3 FixedHTML</a> </h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-3/fixedhtml.html">Lesson 3 FixedHTML</a> </h3>
 
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/Site planning Document.pdf">Lesson 4 Site Planning Doc</a></h3> 
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html"> Lesson 4 Town Template</a> </h3>
