--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
  <img src="images/me.png" alt="Picture of me">
  
  
- <a href="www.byui.edu">BYUI.edu</a>
+ <a href="https://www.byui.edu/">BYUI.edu</a>
 </body>
 </html>
