fixed img and links

--- a/MasonRowley.github.io/assingments/lesson-4/town-template.html
+++ b/MasonRowley.github.io/assingments/lesson-4/town-template.html
@@ -9,8 +9,8 @@
 <body>
  <header>
       <h1>Weather Forcast Site</h1>
-<a href="images/#" alt="weather site logo"></a>
-<a href="images/#" alt="current conditions"></a>   
+<img src="images/#" alt="weather site logo">
+<img src="images/#" alt="current conditions"></a>   
 </header>
     
    <div id="nav">
@@ -19,7 +19,7 @@
 <div id="summary">
     <h2>Town Name</h2>
     <p>Weather Summary</p>
-    <a href="images/#" alt="Hero Image"></a>
+    <img src="images/#" alt="Hero Image"></a>
 
 </div>
 
@@ -31,7 +31,7 @@
  <div id="article">
 <h3>Article</h3>
 <p>Article</p>
-<a href="images/#" alt="article photo"></a>
+<img src="images/#" alt="article photo"></a>
 
 </div>
 
