--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     
-<h3><a href="MasonRowley.github.io/assingments/lesson-3/fixedhtml.html">Lesson 3 FixedHTML</a> </h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-3/fixedhtml.html" target="_blank">Lesson 3 Fixed HTML</a> </h3>
 
-<h3><a href="MasonRowley.github.io/assingments/lesson-4/Site planning Document.pdf">Lesson 4 Site Planning Doc</a></h3> 
-<h3><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html"> Lesson 4 Town Template</a> </h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-4/Site planning Document.pdf" target="_blank">Lesson 4 Site Planning Doc</a></h3> 
+<h3><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html" target="_blank"> Lesson 4 Town Template</a> </h3>
  
  <img src="images/me.png" alt="Picture of me">
  
