--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-<h3><a href="MasonRowley.github.io/assingments/lesson-3/fixedhtml.html" target="_blank">Lesson 3 Fixed HTML</a> </h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-3/fixedhtml.html" target="_blank"></a>Fixed Html assingment </h3>
 
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/Site planning Document.pdf" target="_blank">Lesson 4 Site Planning Doc</a></h3> 
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html" target="_blank"> Lesson 4 Town Template</a> </h3>
