--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<link rel="stylesheet" href="normalize.css">
 <title>CIT 230 Assignment Portal | Mason Rowley | BYU-Idaho</title>
  
 <h1>CIT 230 Assignment Portal | Mason Rowley | BYU-Idaho</h1>
@@ -14,7 +15,7 @@
 
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/Site planning Document.pdf" target="_blank">Lesson 4 Site Planning Doc</a></h3> 
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html" target="_blank"> Lesson 4 Town Template</a> </h3>
- 
+<h3><a href="MasonRowley.github.io/assingments/lesson-5/preston-5.html" target="-blank"> Lesson 5 Preston Site</a></h3> 
  <img src="images/me.png" alt="Picture of me">
  
  
