--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/Site planning Document.pdf" target="_blank">Lesson 4 Site Planning Doc</a></h3> 
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html" target="_blank"> Lesson 4 Town Template</a> </h3>
-<h3><a href="MasonRowley.github.io/assingments/lesson-5/preston-5.html" target="-blank"> Lesson 5 Preston Site</a></h3> 
-<h3><a href="MasonRowley.github.io/assingments/lesson-6/preston-6.html" targer="-blank"> Lesson 6 Preston Site</a></h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-5/preston-5.html" target="_blank"> Lesson 5 Preston Site</a></h3> 
+<h3><a href="MasonRowley.github.io/assingments/lesson-6/preston-6.html" targer="_blank"> Lesson 6 Preston Site</a></h3>
  <img src="images/me.png" alt="Picture of me">
  
  
