html error fixed

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="main.css">
 <title>CIT 230 Assignment Portal | Mason Rowley | BYU-Idaho</title>
- 
+ </head>
+ <header>
 <h1>CIT 230 Assignment Portal | Mason Rowley | BYU-Idaho</h1>
-
-</head>
+<img src="images/me.png" alt="Picture of me">
+</header>
+<main>
 <body>
     
 <h3><a href="MasonRowley.github.io/assingments/lesson-3/fixedhtml.html" target="_blank">Fixed Html assingment</a> </h3>
@@ -17,12 +20,9 @@
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html" target="_blank"> Lesson 4 Town Template</a> </h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-5/preston-5.html" target="_blank"> Lesson 5 Preston Site</a></h3> 
 <h3><a href="MasonRowley.github.io/assingments/lesson-6/preston-6.html" target="_blank"> Lesson 6 Preston Site</a></h3>
- <img src="images/me.png" alt="Picture of me">
- 
- 
-
-
-
+</main>
+ <footer>
  <a href="https://www.byui.edu/">BYUI.edu</a>
+ </footer>
 </body>
 </html>
