--- a/assingments/lesson-6/preston-6.html.html
+++ b/assingments/lesson-6/preston-6.html.html
@@ -7,7 +7,7 @@
  <link rel= "stylesheet" type="text/css" href="styles/normalize.css">
  <link rel= "stylesheet" type="text/css" href="styles/small-6.css">
  <link rel= "stylesheet" type="text/css" href="styles/larger-6.css">
- <link href="https://fonts.googleapis.com/css?family=Montserrat/Roboto+Condensed" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
