--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 <h3><a href="MasonRowley.github.io/assingments/lesson-4/town-template.html" target="_blank"> Lesson 4 Town Template</a> </h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-5/preston-5.html" target="_blank"> Lesson 5 Preston Site</a></h3> 
 <h3><a href="MasonRowley.github.io/assingments/lesson-6/preston-6.html" target="_blank"> Lesson 6 Preston Site</a></h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-7/preston-7.html" target="_blank"> Lesson 7 Preston and Gallery Site</a></h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-7/gallery-7.html" target="_blank"> Lesson 7 Gallery Page</a></h3>
 </main>
+
  <footer>
  <a href="https://www.byui.edu/">BYUI.edu</a>
  </footer>
