--- a/assingments/lesson-8/preston-8.html
+++ b/assingments/lesson-8/preston-8.html
@@ -28,7 +28,7 @@
             <li><a href="MasonRowley.github.io/assingments/lesson-7/preston-7.html" target="_blank">Preston</a></li>
             <li><a href="#" target="_blank">Soda Springs</a></li>
             <li><a href="#" target="_blank">Fish Haven</a></li>
-            <li><a href="#" target="_blank">Storm Center</a></li>
+            <li><a href="MasonRowley.githib.io/assingments/lesson-8/stormcenter.html" target="_blank">Storm Center</a></li>
             <li><a href="MasonRowley.github.io/assingments/lesson-7/gallery-7.html" target="_blank">Gallery</a></li>
             
             
