links finally fixed

--- a/assingments/lesson-8/stormcenter.html
+++ b/assingments/lesson-8/stormcenter.html
@@ -23,8 +23,8 @@
                 <li><a href="preston-8.html" target="_blank">Preston</a></li>
                 <li><a href="#" target="_blank">Soda Springs</a></li>
                 <li><a href="#" target="_blank">Fish Haven</a></li>
-                <li><a href="MasonRowley.githib.io/assingments/lesson-8/stormcenter.html" target="_blank">Storm Center</a></li>
-                <li><a href="MasonRowley.github.io/assingments/lesson-8/gallery-8.html" target="_blank">Gallery</a></li>
+                <li><a href="stormcenter.html" target="_blank">Storm Center</a></li>
+                <li><a href="gallery-8.html" target="_blank">Gallery</a></li>
                 
                 
      </ul>
