added header pics

--- a/assingments/lesson-8/gallery-8.html
+++ b/assingments/lesson-8/gallery-8.html
@@ -15,6 +15,7 @@
         <header>
              <h1>Gallery</h1>
        <h2>&#9925;</h2>
+       <img src="images/trees.jpg" alt="header image" srcset="images/treessmall.jpg 2x">
         </header>
        <nav>
           
