--- a/assingments/lesson-8/preston-8.html
+++ b/assingments/lesson-8/preston-8.html
@@ -16,7 +16,7 @@
  <header>
       <h1>Preston Weather Forcast Site</h1>
 <h2>&#9925;</h2>
-
+<img src="images/trees.jpg" alt="header image" srcset="images/treessmall.jpg 2x">
 <h4>Current Conditions: Sunny and 58</h4> 
 
 </header>
