--- a/assingments/lesson-8/thanks.html
+++ b/assingments/lesson-8/thanks.html
@@ -15,6 +15,7 @@
         <header>
              <h1>Storm Center</h1>
        <h2>&#9925;</h2>
+       <img src="images/trees.jpg" alt="header image" srcset="images/treessmall.jpg 2x">
         </header>
        <nav>
             <button onclick="toggleMenu()">&#9776;</button>
