--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <h3><a href="MasonRowley.github.io/assingments/lesson-6/preston-6.html" target="_blank"> Lesson 6 Preston Site</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-7/preston-7.html" target="_blank"> Lesson 7 Preston and Gallery Site</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-7/gallery-7.html" target="_blank"> Lesson 7 Gallery Page</a></h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-8/tablebuild.html" target="_blank"> Lesson 8 Table Build</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-8/stormcenter.html" target="_blank"> Lesson 8 Storm Center</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-9/heroes.html" target="_blank">Lesson 9 JSON Activity</a></h3>
 </main>
