--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <h3><a href="MasonRowley.github.io/assingments/lesson-8/tablebuild.html" target="_blank"> Lesson 8 Table Build</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-8/stormcenter.html" target="_blank"> Lesson 8 Storm Center</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-9/heroes.html" target="_blank">Lesson 9 JSON Activity</a></h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-9/index.html" target="_blank">Lesson 9 Home page</a></h3>
 </main>
 
  <footer>
