--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <h3><a href="MasonRowley.github.io/assingments/lesson-8/stormcenter.html" target="_blank"> Lesson 8 Storm Center</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-9/heroes.html" target="_blank">Lesson 9 JSON Activity</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-9/index.html" target="_blank">Lesson 9 Home page</a></h3>
+<h3><a href="MasonRowley.github.io/assingments/lesson-10/preston-8.html" target="_blank">Lesson 10 Preston Page</a></h3>
 </main>
 
  <footer>
