--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <h3><a href="MasonRowley.github.io/assingments/lesson-10/api-test.html" target="_blank">Lesson 10 API Activity</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/lesson-10/preston-8.html" target="_blank">Lesson 10 Preston Page</a></h3>
 <h3><a href="MasonRowley.github.io/assingments/weathersite/index.html" target="_blank">Weathersite</a></h3>
+<h3><a href="MasonRowley.github.io/assingments/finalsite/index.html" target="_blank">Temple Inn and Suites</a></h3>
 </main>
 
  <footer>
