final site part 2

--- a/assingments/finalsite/temples.html
+++ b/assingments/finalsite/temples.html
@@ -16,7 +16,7 @@
 </head>
 <body>
  <header>
-      <h1>Temple Inn & Suites</h1>
+      <h1>Temple Inn & Suites | Temple Gallery</h1>
 <img src="images/logo.jpg" width="400" height="150" srcset="images/logo-small.jpg 2x" alt="Temple Site logo">
 
 
