--- a/assingments/finalsite/res.html
+++ b/assingments/finalsite/res.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>Temple Inn & Suites | Home</title>
+<title>Temple Inn & Suites | Reservations</title>
  <link rel= "stylesheet" type="text/css" href="styles/normalize.css">
  <link rel= "stylesheet" type="text/css" href="styles/small-7.css">
  <link rel= "stylesheet" type="text/css" href="styles/larger-7.css">
@@ -16,7 +16,7 @@
 </head>
 <body>
  <header>
-      <h1>Temple Inn & Suites</h1>
+      <h1>Temple Inn & Suites | Make a Reservation</h1>
 <img src="images/logo.jpg" width="400" height="150" srcset="images/logo-small.jpg 2x" alt="Temple Site logo">
 
 
