--- a/basicpage/basicpage.html
+++ b/basicpage/basicpage.html
@@ -14,7 +14,7 @@
         <li> 2.7 ghz i5 processor</li>
     </ul>
     <img src="images/me.png">
-    <a href="http://www.byui.edu/online/"></a> 
+    <a href="http://www.byui.edu/online/">Byu-Idaho Online</a> 
 </main>
  
 </body>
