lesson03 fix spelling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <h2>CIT 230 - Assignment Portal</h2>
     <ul>
-        <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fix broken HTMl Markup</a></li>
+        <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fix broken HTML Markup</a></li>
     </ul>  
 </main>
  
