--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <h2>CIT 230 - Assignment Portal</h2>
     <ul>
         <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fix broken HTML Markup</a></li>
+        <li>Lesson 4: <a href="assignments/lesson-4/Site planning Document.pdf">Site Planning Document</a></li>
+        <li>Lesson 4: <a href="assignments/lesson-4/preston-4.html">Lesson 4 Preston Page</a></li>
     </ul>  
 </main>
  
