--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="description" content="BYU-Idaho Assignment Portal">
 <title>CIT 230 Assignment Portal | Mason Rowley | BYU-Idaho</title>
+<link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/main.css">
  </head>
 
@@ -21,6 +22,7 @@
         <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fix broken HTML Markup</a></li>
         <li>Lesson 4: <a href="assignments/lesson-4/Site planning Document.pdf">Site Planning Document</a></li>
         <li>Lesson 4: <a href="assignments/lesson-4/preston-4.html">Lesson 4 Preston Page</a></li>
+        <li>Lesson 5: <a href="assingments/lesson-5/preston-5.html">Lesson 5 Preston Page</a></li>
     </ul>  
 </main>
  
