--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="css/small-6.css">
 <link rel="stylesheet" href="css/large-6.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link rel="script" href="scripts/hamburger.js" >
  </head>
 
 <body>
@@ -19,8 +20,8 @@
         </div>
 </header>
 <nav>
-        <ul>
-        <li id="menu">Menu</li>
+        <ul id="rnav">
+        <li id="menu"><a href= "#" onclick="toggleMenu()">&#9776; Menu</a></li>
         <li><a href="link">Home</a></li>
         <li><a href="preston-5.html">Preston</a></li>
         <li><a href="link">Fish Haven</a></li>
@@ -33,13 +34,13 @@
     <h3>Preston, Idaho</h3>
    <h4 id="fivedaytitle">5-Day Forcast</h4>
    <ol id="fiveday">
-       <li>Temp</li>
-       <li>Humidity</li>
-       <li>Wind Speed and Direction</li>
-       <li>Cloud Density</li>
-       <li>High and Low Temps</li>
+       <li>Temp: 65&deg;F </li>
+       <li>Humidity: 23%</li>
+       <li>Wind Speed and Direction: 5mph SW</li>
+       <li>Cloud Density: None</li>
+       <li>High/Low Temps: 67&deg;F/48&deg;F </li>
    </ol>
-   <img src="images/preston-small.jpg" alt="Hero Image">
+   <img src="images/preston-small.jpg" alt="Hero Image" srcset="images/preston-smaller.jpg 350w">
 </main>
  <article>
     <section class="articlebody">
@@ -52,11 +53,12 @@
          fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa<br> 
          qui officia deserunt mollit anim id est laborum."</p>
     </section>
-    <img src="images/fire-small.jpg" alt="Article Image">     
+    <img src="images/fire-small.jpg" alt="Article Image" srcset="images/fire-smaller.jpg 350w">     
  </article>
 
 <footer>
-        &#169;2019 Mason Rowley USA <a href="BYUI.edu/online">BYU-Idaho Online Learning</a>
+        <span id="date"></span> | &#169;2019 Mason Rowley USA <a href="BYUI.edu/online">BYU-Idaho Online</a>
+        <script src="scripts/currentdate.js"></script>
 </footer>
 </body>
 </html>
