--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="css/small-6.css">
 <link rel="stylesheet" href="css/large-6.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<link rel="script" href="scripts/hamburger.js" >
+<script src="scripts/hamburger.js"></script>
  </head>
 
 <body>
@@ -20,15 +20,15 @@
         </div>
 </header>
 <nav>
-        <ul id="rnav">
-        <li id="menu"><a href= "#" onclick="toggleMenu()"> &#9776; Menu</a></li>
-        <li><a href="link">Home</a></li>
-        <li><a href="preston-5.html">Preston</a></li>
-        <li><a href="link">Fish Haven</a></li>
-        <li><a href="link">Soda Springs</a></li>
-        <li><a href="link">Gallery</a></li>
-        <li><a href="link">Storm Center</a></li>
-        </ul>
+       <ul class="navigation">
+           <li id=menu><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
+           <li><a href="#" title="Home">Home</a></li>
+           <li><a href="#" title="Preston">Preston</a></li>
+           <li><a href="#" title="Fish Haven">Fish Haven</a></li>
+           <li><a href="#" title="Soda Springs">Soda Springs</a></li>
+           <li><a href="#" title="Gallery">Gallery</a></li>
+           <li><a href="#" title="Storm Center">Storm Center</a></li>
+       </ul>
     </nav>
 <main>
     <h3>Preston, Idaho</h3>
