lesson 7 so far

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li>Lesson 4: <a href="assignments/lesson-4/Site planning Document.pdf">Site Planning Document</a></li>
         <li>Lesson 4: <a href="assignments/lesson-4/preston-4.html">Lesson 4 Preston Page</a></li>
         <li>Lesson 5: <a href="assignments/lesson-5/preston-5.html">Lesson 5 Preston Page</a></li>
+        <li>Lesson 6: <a href="assignments/lesson-6/preston-6.html">Lesson 6 Preston Page</a></li>
+        <li>Lesson 7: <a href="assignments/lesson-7/preston-7.html">Lesson 7 Preston Page</a></li>
+        <li>Lesson 7: <a href="assignments/lesson-7/gallery-7.html">Lesson 7 Gallery Page</a></li>
     </ul>  
 </main>
  
