--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -34,12 +34,12 @@
 <main>
     <h2>Weather Gallery</h2>
    <div class="gallery">
-      <img src="images/gallery-1-large-1.jpg" srcset="images/gallery-1-small.jpeg 350w" alt="gallery image">
-      <img src="images/gallery-2-large-2.jpg" srcset="images/gallery-2-small.jpeg 350w" alt="gallery image">
-      <img src="images/gallery-3-large-3.jpg" srcset="images/gallery-3-small.jpeg 350w" alt="gallery image">
-      <img src="images/gallery-4-large-4.jpg" srcset="images/gallery-4-small.jpeg 350w" alt="gallery image">
-      <img src="images/gallery-5-large-5.jpg" srcset="images/gallery-5-small.jpeg 350w" alt="gallery image">
-      <img src="images/gallery-6-large-6.jpg" srcset="images/gallery-6-small.jpeg 350w" alt="gallery image">      
+           <img src="images/gallery-large-1.png" srcset="images/gallery-large-1-small.png 350w" alt="Gallery 1"> 
+           <img src="images/gallery-large-2.png" srcset="images/gallery-large-2-small.png 350w" alt="Gallery 2">
+           <img src="images/gallery-large-3.jpeg" srcset="images/gallery-large-3-small.jpeg 350w" alt="Gallery 3">
+           <img src="images/gallery-large-4.jpeg" srcset="images/gallery-large-4-small.jpeg 350w" alt="Gallery 4">
+           <img src="images/gallery-large-5.jpeg" srcset="images/gallery-large-5-small.jpeg 350w" alt="Gallery 5">
+           <img src="images/gallery-large-6.jpeg" srcset="images/gallery-large-6-small.jpeg 350w" alt="Gallery 6">
 
 
    </div>
