--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li>Lesson 6: <a href="assignments/lesson-6/preston-6.html">Lesson 6 Preston Page</a></li>
         <li>Lesson 7: <a href="assignments/lesson-7/preston-7.html">Lesson 7 Preston Page</a></li>
         <li>Lesson 7: <a href="assignments/lesson-7/gallery-7.html">Lesson 7 Gallery Page</a></li>
+        <li>Lesson 8: <a href="assignments/lesson-8/tablebuild.html">Lesson 8 Table Build</a></li>
     </ul>  
 </main>
  
