--- a/assignments/lesson-7/preston-7.html
+++ b/assignments/lesson-7/preston-7.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="css/normalize.css" >
 <link rel="stylesheet" href="css/small-7.css">
 <link rel="stylesheet" href="css/large-7.css">
+<link rel="stylesheet" href="css/medium-7.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <script src="scripts/hamburger.js"></script>
 <script src="scripts/windchill.js"></script>
@@ -42,7 +43,7 @@
        <li>High/Low Temps: 67&deg;F/48&deg;F </li>
        <li>Wind Chill: <span id="output"> </span></li>
    </ol>
-   <img src="images/preston-small.jpg" alt="Hero Image" srcset="images/preston-smaller.jpg 350w">
+   <img src="images/preston-small.jpg" alt="Hero Image" srcset="images/preston-smaller.jpg 350w" >
 </main>
  <article>
     <section class="articlebody">
