--- a/assignments/lesson-9/index.html
+++ b/assignments/lesson-9/index.html
@@ -36,6 +36,9 @@
     <section>
         
     </section>
+    <section id ="photos">
+        
+    </section>
 </main>
 <footer>
         <span id="date"></span> | &#169;2019 Mason Rowley USA <a href="BYUI.edu/online">BYU-Idaho Online</a>
