--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li>Lesson 8: <a href="assignments/lesson-8/tablebuild.html">Lesson 8 Table Build</a></li>
         <li>Lesson 8: <a href="assignments/lesson-8/stormcenter.html">Lesson 8 Storm Center</a></li>
         <li>Lesson 9: <a href="assignments/lesson-9/heroes.html"> Lesson 9 Json heroes activity</a></li>
+        <li>Lesson 9: <a href="assignments/lesson-9/index.html"> Lesson 9 Home Page</a></li>
     </ul>  
 </main>
  
