--- a/assignments/lesson-10/index.html
+++ b/assignments/lesson-10/index.html
@@ -24,7 +24,7 @@
 <nav>
        <ul class="navigation">
            <li id=menu><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
-           <li><a href="#" title="Home">Home |</a></li>
+           <li><a href="index.html" title="Home">Home |</a></li>
            <li><a href="preston-7.html" title="Preston">Preston |</a></li>
            <li><a href="#" title="Fish Haven">Fish Haven |</a></li>
            <li><a href="#" title="Soda Springs">Soda Springs |</a></li>
