--- a/assignments/lesson-10/thanks.html
+++ b/assignments/lesson-10/thanks.html
@@ -3,15 +3,14 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="description" content="Preston Idaho Weather Page">
-<title>Preston Idaho Weather Page</title>
+<meta name="description" content="Storm Center">
+<title>Storm Center</title>
 <link rel="stylesheet" href="css/normalize.css" >
 <link rel="stylesheet" href="css/small-8.css">
 <link rel="stylesheet" href="css/large-8.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <script src="scripts/hamburger.js"></script>
-
-<script src="scripts/town-data.js"></script>
+<script src="scripts/windchill.js"></script>
  </head>
 
 
@@ -29,14 +28,15 @@
            <li><a href="#" title="Fish Haven">Fish Haven |</a></li>
            <li><a href="#" title="Soda Springs">Soda Springs |</a></li>
            <li><a href="gallery-7.html" title="Gallery">Gallery |</a></li>
-           <li><a href="stormcenter.html" title="Storm Center">Storm Center</a></li>
+           <li><a href="#" title="Storm Center">Storm Center</a></li>
        </ul>
     </nav>
 <main>
-    <section>
-        
-    </section>
    
+    <h2>Thanks for sending in this storm information!</h2>
+
+
+
 </main>
 <footer>
         <span id="date"></span> | &#169;2019 Mason Rowley USA <a href="BYUI.edu/online">BYU-Idaho Online</a>
