--- a/assignments/lesson-10/preston-10.html
+++ b/assignments/lesson-10/preston-10.html
@@ -67,7 +67,7 @@
  </article>
 
 <footer>
-        <span id="date"></span> | &#169;2019 Mason Rowley USA <a href="BYUI.edu/online">BYU-Idaho Online</a>
+        <span id="date"></span> | &#169;2019 Mason Rowley USA <a href="BYUI.edu/online">BYU-Idaho Online</a>| Weather info: <a href="https://openweathermap.org">openweathermap.org</a>
         <script src="scripts/currentdate.js"></script>
 </footer>
 
