--- a/assignments/Lesson-11/thanks.html
+++ b/assignments/Lesson-11/thanks.html
@@ -23,12 +23,12 @@
 <nav>
        <ul class="navigation">
            <li id=menu><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
-           <li><a href="#" title="Home">Home |</a></li>
-           <li><a href="preston-7.html" title="Preston">Preston |</a></li>
-           <li><a href="#" title="Fish Haven">Fish Haven |</a></li>
-           <li><a href="#" title="Soda Springs">Soda Springs |</a></li>
+           <li><a href="index.html" title="Home">Home |</a></li>
+           <li><a href="preston-10.html" title="Preston">Preston |</a></li>
+           <li><a href="fish-haven.html" title="Fish Haven">Fish Haven |</a></li>
+           <li><a href="soda-springs.html" title="Soda Springs">Soda Springs |</a></li>
            <li><a href="gallery-7.html" title="Gallery">Gallery |</a></li>
-           <li><a href="#" title="Storm Center">Storm Center</a></li>
+           <li><a href="stormcenter.html" title="Storm Center">Storm Center</a></li>
        </ul>
     </nav>
 <main>
