--- a/assignments/Lesson-11/soda-springs.html
+++ b/assignments/Lesson-11/soda-springs.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="description" content="Preston Idaho Weather Page">
-<title>Preston Idaho Weather Page</title>
+<meta name="description" content="Soda Springs Idaho Weather Page">
+<title>Soda Springs Idaho Weather Page</title>
 <link rel="stylesheet" href="css/normalize.css" >
 <link rel="stylesheet" href="css/small-8.css">
 <link rel="stylesheet" href="css/large-8.css">
@@ -31,7 +31,7 @@
        </ul>
     </nav>
 <main>
-    <h3>Preston, Idaho</h3>
+    <h3>Soda Springs, Idaho</h3>
    
    <ol id="fiveday">
         <h4>Current Conditions</h4>
@@ -74,8 +74,8 @@
 </footer>
 
 <script src="scripts/hamburger.js"></script>
-<script src="scripts/weathersummary.js"></script>
-<script src="scripts/preston-data.js"></script>
+<script src="scripts/soda-weathersummary.js"></script>
+<script src="scripts/soda-data.js"></script>
 
 </body>
 
