--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li>Lesson 10: <a href="assignments/lesson-10/api-test.html"> Lesson 10 API activity</a></li>
         <li>Lesson 10: <a href="assignments/lesson-10/preston-10.html">Lesson 10 Preston Page</a></li>
         <li>Lesson 11: <a href="assignments/Lesson-11/index.html">Lesson 11 Full website</a></li>
+        <li>Final:</li><a href="assignments/Final/temple-home.html">Final website home</a></li>
     </ul>  
 </main>
  
