--- a/assignments/Final/resources.html
+++ b/assignments/Final/resources.html
@@ -34,22 +34,11 @@
        </ul>
     </nav>
 <main>
-    <h3 id="action">Make a <a href ="reservations.html" title="reservation link">reservation!</a> </h3>
-    <div id="summary">
-    <h4>Temple Summary</h4>
-    
-    <img alt="Denver Colorado Temple" srcset="images/denver-temple-main.jpg 2x,
-    images/denver-temple-mobile.jpg 1x" src="images/denver-temple-main.jpg">
-    
-    <p>Located in Centennial, Colorado the Denver Temple was dedicated on October 24th, 1986. 
-        It was the only temple in Colorado until the Fort Collins Temple was completed and dedicated in 2016.<br> 
-        Temple info from <a href="https://www.lds.org/temples">LDS.org.</a> </p>
-   </div>
-
-   <div id="contact">
-       <h3>Contact Us!</h3>
-       <p>For information on how to get into contact with us, click on this <a href="contact.html" title="contact link">link.</a></p>
-   </div>
+    Resources:
+    <ul>
+        <li>Pictures and temple info from: <a href="lds.org/temples" title="temple resource">lds.org</a></li>
+        <li>Pictures from:  <a href="https://www.pexels.com/" title="temple resource">Pexels</a></li>
+    </ul>
 </main>
 <footer>
         <span id="date"></span> | &#169;2019 Mason Rowley USA <a href="BYUI.edu/online">BYU-Idaho Online | <a href="resources.html" title="resources page">Resources</a>
